# aur-depends

./: Cargo.toml
.github/workflows/: aur-depends.yml
src/: actions.rs  base.rs  cb.rs  conflicts.rs  error.rs  flags.rs  lib.rs  package.rs  pkgbuild.rs  repo.rs  resolve.rs  satisfies.rs  tests.rs  upgrade.rs
tests/db/local/filesystem-2019.05-2/: desc
tests/db/local/pacaur-1-1/: desc  mtree
tests/db/local/systemd-git-0/: desc  files  mtree
tests/db/local/version_equal-1-1/: desc  mtree
tests/db/local/version_newer-1-1/: desc  mtree
tests/db/local/version_older-1-1/: desc  mtree
tests/srcinfo/: custom.SRCINFO
