[package]
name = "aur-depends"
version = "4.0.3"
authors = ["morganamilo <m?organamilo@gmail.com>"]
edition = "2021"

description = "A libary for resolving aur dependencies"
homepage = "https://github.com/Morganamilo/aur-depends"
repository = "https://github.com/Morganamilo/aur-depends"
documentation = "https://docs.rs/aur_depends"
license = "GPL-3.0"
keywords = ["archlinux", "pkgbuild", "arch", "aur"]
exclude = ["tests"]

[package.metadata.docs.rs]
features = [ "docs-rs" ]

[dependencies]
alpm = "4.0.0"
alpm-utils = "4.0.0"
log = "0.4.21"
raur = { version = "7.0.0", default-features = false, features = ["async"] }
bitflags = "2.4.2"
srcinfo = "1.1.0"

[dev-dependencies]
async-trait = "0.1.77"
simplelog = "0.12.2"
tokio = { version = "1.36.0", features = ["macros", "rt"] }

[features]
git = ["alpm/git", "alpm-utils/git"]
generate = ["alpm/generate", "alpm-utils/generate"]
rustls-tls = ["raur/rustls-tls"]
docs-rs = ["alpm/docs-rs"]
default = ["raur/default"]
