[package]
name = "aur-depends"
version = "4.0.5"
authors = ["morganamilo <m?organamilo@gmail.com>"]
edition = "2024"

description = "A libary for resolving aur dependencies"
homepage = "https://github.com/Morganamilo/aur-depends"
repository = "https://github.com/Morganamilo/aur-depends"
documentation = "https://docs.rs/aur_depends"
license = "GPL-3.0"
keywords = ["archlinux", "pkgbuild", "arch", "aur"]
exclude = ["tests"]

[package.metadata.docs.rs]
features = [ "docs-rs" ]

[dependencies]
alpm = "4.0.3"
alpm-utils = "4.0.1"
log = "0.4.28"
raur = { version = "7.0.0", default-features = false, features = ["async"] }
bitflags = "2.9.4"
srcinfo = "1.3.1"

[dev-dependencies]
async-trait = "0.1.89"
simplelog = "0.12.2"
tokio = { version = "1.47.1", features = ["macros", "rt"] }

[features]
git = ["alpm/git", "alpm-utils/git"]
generate = ["alpm/generate", "alpm-utils/generate"]
rustls-tls = ["raur/rustls-tls"]
docs-rs = ["alpm/docs-rs"]
default = ["raur/default"]
